cluster/apps/monitoring/dozzle/backend-traffic-policy.yaml
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: dozzle
  namespace: monitoring
spec:
  targetRefs:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    name: dozzle
  timeout:
    http:
      requestTimeout: 0s
