cluster/apps/monitoring/dozzle/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: dozzle
  namespace: monitoring
spec:
  parentRefs:
  - name: envoy-gateway
    namespace: networking
    sectionName: https
  hostnames:
  - "dozzle.${SECRET_CLUSTER_DOMAIN}"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: dozzle
      port: 8080
